Fix overflow issue.

--- a/resources/scss/components/email-notification.scss
+++ b/resources/scss/components/email-notification.scss
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem;
   width: min(110ch, 100%);
-  margin: 0 auto;
+  margin: 1rem auto;
+  max-height: 100dvh;
+  overflow: auto;
 
   p {
     margin: 0;
@@ -95,17 +96,11 @@
 
 /* Responsive design for smaller screens */
 @media (max-width: 768px) {
-  .notification-detail {
+  .triggered-by, .content-section {
     padding: 1rem;
+    border-radius: 0 !important;
   }
-
-  .triggered-by {
-    padding: 1rem;
-  }
-
   .content-section {
-    padding: 1rem;
-
     .item-context h2 {
       font-size: 1.25rem;
     }
